--- a/pages/ai-chat.html
+++ b/pages/ai-chat.html
@@ -14,6 +14,7 @@
             <div class="nav-links">
                 <a href="../index.html">Home</a>
                 <a href="dashboard.html">Dashboard</a>
+                <a href="integrations.html">Integrations</a>
             </div>
         </nav>
     </header>
